# shattuck

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
examples/: main.rs  mpmc-crossbeam.rs  mpmc-shattuck.rs
src/: lib.rs  main.rs
src/core/: error.rs  inc.rs  interp.rs  memory.rs  mod.rs  object.rs  runtime.rs  runtime_error.rs  runtime_pool.rs  shared_memory.rs  shared_runtime.rs
src/object/: mod.rs
src/objects/: class.rs  derived.rs  int.rs  method.rs  mod.rs  prop.rs  thread.rs
src/objects/method/: mod.rs
src/util/: addr_gen.rs  mod.rs
