[package]
name = "shattuck"
version = "0.1.1-dev"
authors = ["cowsay"]
edition = "2018"

description = "Rust-based script programming language."
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/shattuck"
homepage = "https://github.com/whoiscc/shattuck"
repository = "https://github.com/whoiscc/shattuck"

[dependencies]
failure = "^0.1.5"
failure_derive = "^0.1.1"
hulunbuir = { path = "../hulunbuir" }

[dev-dependencies]
rand = "^0.6.5"
crossbeam = "^0.7.1"
